[metadata]
name = python_utils
version=0.1.0
author = JAMWINE
author_email = dagjoins@gmail.com
description = A package that includes custom Python utils
url = https://github.com/jamwine/python-utils
keywords = python_utils
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.9
install_requires =
    setuptools
packages = find:
include_package_data = True
tests_require = pytest
zip_safe = False
platforms = any

[options.packages.find]
include =
    python_utils
    python_utils.*
exclude = tests

[options.extras_require]
lint =
    black
    flake8
    isort
    jedi
    jupyter
    yapf
test =
    pytest
    pytest-cov
    pytest-mock
    pytest-env
    codecov
    coverage
docs =
    sphinx
    sphinx_rtd_theme
    flake8-docstrings
    docutils
dev =
    black
    flake8
    flake8-docstrings
    isort
    jedi
    jupyter
    yapf
    pytest
    pytest-cov
    pytest-mock
    pytest-env
    codecov
    coverage
    sphinx
    sphinx_rtd_theme
    docutils

[options.entry_points]

[bdist_wheel]
universal = 1